Update to Dashboard

--- a/src/my-theme.scss
+++ b/src/my-theme.scss
@@ -2,7 +2,8 @@
 
 @include mat-core();
 
-$my-theme-primary: mat-palette($mat-teal,900);
+$my-theme-primary: mat-palette($mat-blue-grey,A200,A100,A400);
+//$my-theme-primary: mat-palette($mat-teal,900);
 $my-theme-accent: mat-palette($mat-orange,A200,A100,A400);
 $my-theme-warn: mat-palette($mat-red);
 
