--- a/src/app/profile-list/profile-list.page.html
+++ b/src/app/profile-list/profile-list.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title><mat-icon>supervised_user_circle</mat-icon> Manage Profile</ion-title>
+    <h3><ion-title><mat-icon>supervised_user_circle</mat-icon> Manage Profile</ion-title></h3>
   </ion-toolbar>
 </ion-header>
 
