--- a/src/app/welcome/dashboard/dashboard.page.html
+++ b/src/app/welcome/dashboard/dashboard.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title><mat-icon>dashboard</mat-icon> {{title}}</ion-title>
+    <h3><ion-title><mat-icon>dashboard</mat-icon> {{title}}</ion-title></h3>
   </ion-toolbar>
 </ion-header>
 
