--- a/src/app/welcome/dashboard/dashboard.page.html
+++ b/src/app/welcome/dashboard/dashboard.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content class="ion-padding">
   <img src="../../../assets/images/scicom.png">
   <p></p>
   <div class="row">
