--- a/src/app/welcome/instruction/instruction.page.html
+++ b/src/app/welcome/instruction/instruction.page.html
@@ -6,7 +6,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content class="ion-padding">
   <img src="../../../assets/images/scicom.png">
   <div class="d-flex flex-row-reverse bd-highlight">
     <div class="p-2 bd-highlight"><button mat-raised-button color="accent" (click)="nextPage()">{{skip}} <mat-icon>fast_forward</mat-icon></button></div>
