--- a/src/app/welcome/terms/terms.page.html
+++ b/src/app/welcome/terms/terms.page.html
@@ -6,7 +6,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content class="ion-padding">
   <img src="../../../assets/images/scicom.png">
   <mat-card>
     <hr>
