--- a/src/app/profile-list/profile/profile.component.html
+++ b/src/app/profile-list/profile/profile.component.html
@@ -1,72 +1,79 @@
 <mat-card>
   <mat-card-header>
-    <span>{{service.form.controls['id'].value?"Modify Profile":"New Profile"}}</span>
+    <span>{{service.form.controls['id'].value? profile2: profile}}</span>
     <span class="fill-remaining-space"></span>
     <button class="btn-dialog-close" mat-stroked-button color="warn" (click)="onClose()" tabIndex="-1"><mat-icon>clear</mat-icon></button>
   </mat-card-header>
   <mat-card-content>
     <form [formGroup]="service.form" class="normal-form" (submit)="onSubmit()">
-            <input type="hidden" formControlName="id">
-            <mat-form-field>
-              <input formControlName="nickname" matInput placeholder="Nickname">
-              <mat-error>This field is mandatory.</mat-error>
-            </mat-form-field>
+        <input type="hidden" formControlName="id">
+        <mat-form-field>
+          <input formControlName="nickname" matInput placeholder="{{nickname}}">
+          <mat-error>This field is mandatory.</mat-error>
+        </mat-form-field>
 
-            <mat-form-field>
-              <input formControlName="isMalaysian" matInput placeholder="IsMalaysian">
-              <mat-error>This field is mandatory.</mat-error>
-            </mat-form-field>
+        <mat-slide-toggle [checked]="service.form.get('isMalaysian').value" (change)="setMalaysian()">{{isMalay}}</mat-slide-toggle>
 
-            <mat-form-field>
-              <input formControlName="nationality" matInput placeholder="Nationality">
-              <mat-error>This field is mandatory.</mat-error>
-            </mat-form-field>
-
-            <mat-form-field>
-              <input formControlName="country" matInput placeholder="Country">
-              <mat-error>This field is mandatory.</mat-error>
-            </mat-form-field>
-
-            <mat-form-field>
-              <input formControlName="travelDocNum" matInput placeholder="TravelDocNum">
-              <mat-error>This field is mandatory.</mat-error>
-            </mat-form-field>
-
-            <mat-form-field>
-              <input  [matDatepicker]="expiryDate" formControlName="expiryDate" matInput placeholder="ExpiryDate">
-              <mat-datepicker-toggle matSuffix [for]="expiryDate"></mat-datepicker-toggle>
-              <mat-datepicker #expiryDate></mat-datepicker>
-            </mat-form-field>
-
-            <mat-form-field>
-              <input formControlName="givenName" matInput placeholder="GivenName">
-              <mat-error>This field is mandatory.</mat-error>
-            </mat-form-field>
-
-            <mat-form-field>
-              <input formControlName="surname" matInput placeholder="Surname">
-              <mat-error>This field is mandatory.</mat-error>
-            </mat-form-field>
-            <mat-form-field>
-              <input  [matDatepicker]="dob" formControlName="dob" matInput placeholder="DOB">
-              <mat-datepicker-toggle matSuffix [for]="dob"></mat-datepicker-toggle>
-              <mat-datepicker #dob></mat-datepicker>
-            </mat-form-field>
-            <mat-form-field>
-              <input formControlName="gender" matInput placeholder="Gender">
-              <mat-error>This field is mandatory.</mat-error>
-            </mat-form-field>
-
-            <mat-form-field>
-              <input formControlName="identificationNo" matInput placeholder="IdentificationNo">
-              <mat-error>This field is mandatory.</mat-error>
-            </mat-form-field>
-
-            <br/>
-            <div class="button-row">
-              <button mat-raised-button color="accent" type="submit" [disabled]="service.form.invalid">Submit</button>
-              <button mat-raised-button color="warn" [disabled]="service.form.controls['id'].value" (click)="onClear()">Clear</button>
+        <mat-form-field>
+        <mat-select matNativeControl formControlName="nationality" placeholder="{{nationality}}">
+            <div *ngFor="let nationality of nationalities">
+                <mat-option value="{{nationality}}">{{nationality}}</mat-option>
             </div>
+        </mat-select>
+            <mat-error>This field is mandatory.</mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-select matNativeControl formControlName="country"  placeholder="{{country}}">
+            <div *ngFor="let country of countries">
+                <mat-option value="{{country}}">{{country}}</mat-option>
+            </div>
+          </mat-select>
+          <mat-error>This field is mandatory.</mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <input formControlName="travelDocNum" matInput placeholder="{{travelDocNo}}">
+            <mat-error *ngIf="service.form.controls['travelDocNum'].errors?.required">This field is mandatory.</mat-error>
+            <mat-error *ngIf="service.form.controls['travelDocNum'].errors?.pattern">TravelDocNum Should be Numeric</mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <input  [matDatepicker]="expiryDate" formControlName="expiryDate" matInput placeholder="{{expiryDate1}}">
+          <mat-datepicker-toggle matSuffix [for]="expiryDate"></mat-datepicker-toggle>
+          <mat-datepicker #expiryDate></mat-datepicker>
+        </mat-form-field>
+
+        <mat-form-field>
+          <input formControlName="givenName" matInput placeholder="{{givenName}}">
+          <mat-error>This field is mandatory.</mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <input formControlName="surname" matInput placeholder="{{surname}}">
+          <mat-error>This field is mandatory.</mat-error>
+        </mat-form-field>
+        <mat-form-field>
+          <input  [matDatepicker]="dob" formControlName="dob" matInput placeholder="{{dob1}}">
+          <mat-datepicker-toggle matSuffix [for]="dob"></mat-datepicker-toggle>
+          <mat-datepicker #dob></mat-datepicker>
+        </mat-form-field>
+        <mat-radio-group formControlName="gender" aria-label="Select an option">
+            <mat-radio-button value="Male">{{male}}</mat-radio-button>
+            <mat-radio-button value="Female">{{female}}</mat-radio-button>
+        </mat-radio-group>
+
+        <mat-form-field>
+          <input formControlName="identificationNo" matInput placeholder="{{identificationNo}}">
+            <mat-error *ngIf="service.form.controls['identificationNo'].errors?.required">This field is mandatory.</mat-error>
+            <mat-error *ngIf="service.form.controls['identificationNo'].errors?.pattern">IdentificationNo Should be Numeric</mat-error>
+        </mat-form-field>
+
+        <br/>
+        <div class="button-row">
+          <button mat-raised-button color="accent" type="submit" [disabled]="service.form.invalid">Submit</button>
+          <button mat-raised-button color="warn" [disabled]="service.form.controls['id'].value" (click)="onClear()">Clear</button>
+        </div>
     </form>
   </mat-card-content>
 </mat-card>
