--- a/src/app/welcome/dashboard/dashboard.page.html
+++ b/src/app/welcome/dashboard/dashboard.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <h3><ion-title><mat-icon>dashboard</mat-icon> {{title}}</ion-title></h3>
+    <h3><ion-title><img src="../../../assets/icon/dashboard.png" width="30" height="30"> {{title}}</ion-title></h3>
   </ion-toolbar>
 </ion-header>
 
@@ -15,13 +15,13 @@
   <br/>
   <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-4"></div>
-    <div class = "col-lg-4 col-md-4 col-sm-4"><button mat-stroked-button color="accent" class="btn btn-block">
+    <div class = "col-lg-4 col-md-4 col-sm-4"><button mat-stroked-button color="accent" class="btn btn-block" (click)="loadDLC()">
       <img src="../../../assets/icon/eland.png" width="50" height="50"><br/>{{button2}}</button></div>
   </div>
   <br/>
   <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-4"></div>
-    <div class = "col-lg-4 col-md-4 col-sm-4"><button mat-stroked-button color="accent" class="btn btn-block">
+    <div class = "col-lg-4 col-md-4 col-sm-4"><button mat-stroked-button color="accent" class="btn btn-block" (click)="loadQR()">
       <img src="../../../assets/icon/qr.png" width="50" height="50"><br/>{{button3}}</button></div>
   </div>
   <br/>
