--- a/src/app/profile-list/profile-list.page.html
+++ b/src/app/profile-list/profile-list.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title><a (click)="prevPage()"><mat-icon>keyboard_arrow_left</mat-icon></a>
-      <img src="../../assets/icon/traveler.png" width="30" height="30"> {{title}}</ion-title>
+    <ion-title><h3><a (click)="prevPage()"><mat-icon>keyboard_arrow_left</mat-icon></a>
+      <img src="../../assets/icon/traveler.png" width="30" height="30"> {{title}}</h3></ion-title>
   </ion-toolbar>
 </ion-header>
 
