--- a/src/app/welcome/dashboard/dashboard.page.html
+++ b/src/app/welcome/dashboard/dashboard.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <h3><ion-title><img src="../../../assets/icon/dashboard.png" width="30" height="30"> {{title}}</ion-title></h3>
+    <ion-title><h3><img src="../../../assets/icon/dashboard.png" width="30" height="30"> {{title}}</h3></ion-title>
   </ion-toolbar>
 </ion-header>
 
