--- a/src/app/dlc/dlc.page.html
+++ b/src/app/dlc/dlc.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title><h3><a (click)="prevPage()"><mat-icon>keyboard_arrow_left</mat-icon></a>
-      <img src="../../assets/icon/eland.png" width="30" height="30"> DLC</h3></ion-title>
+      <img src="../../assets/icon/eland.png" width="30" height="30"> {{title}}</h3></ion-title>
   </ion-toolbar>
 </ion-header>
 
