--- a/src/app/dlc/dlc.page.html
+++ b/src/app/dlc/dlc.page.html
@@ -3,6 +3,7 @@
     <ion-title><h3><a (click)="prevPage()"><mat-icon>keyboard_arrow_left</mat-icon></a>
       <img src="../../assets/icon/eland.png" width="30" height="30"> {{title}}</h3></ion-title>
   </ion-toolbar>
+  <ion-img src="assets/images/e-card.jpg"></ion-img>
 </ion-header>
 
 <ion-content class="ion-padding">
