--- a/src/app/welcome/dashboard/dashboard.page.html
+++ b/src/app/welcome/dashboard/dashboard.page.html
@@ -6,10 +6,12 @@
 
 <ion-content class="ion-padding">
   <img src="../../../assets/images/scicom.png">
-  <p></p>
+  <ion-avatar></ion-avatar>
+
   <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-4"></div>
-    <div class = "col-lg-4 col-md-4 col-sm-4"><button mat-stroked-button color="accent" class="btn btn-block" (click)="loadProfile()">
+    <div class = "col-lg-4 col-md-4 col-sm-4">
+      <button mat-stroked-button color="accent" class="btn btn-block" (click)="loadProfile()">
       <img src="../../../assets/icon/traveler.png" width="50" height="50"><br/>{{button1}}</button></div>
   </div>
   <br/>
