--- a/src/app/welcome/home/home.page.html
+++ b/src/app/welcome/home/home.page.html
@@ -9,14 +9,13 @@
 <ion-content class="ion-padding">
     <img src="../../../assets/images/scicom.png">
     <mat-card>
-        <mat-card>
+        <ion-card>
             <h2>"Welcome to Malaysia's <b>E-Landing</b> Card Application."</h2>
-        </mat-card>
-        <mat-card-header>
-            <h5>Please choose your preferred Language to proceed</h5>
-        </mat-card-header>
-        <hr>
-        <mat-card-content>
+        </ion-card>
+        <ion-card-header>
+            <h4>Please choose your preferred Language to proceed</h4>
+        </ion-card-header>
+        <ion-card-content>
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-4"></div>
                 <div class = "col-lg-4 col-md-4 col-sm-4"><button mat-stroked-button color="accent" class="btn btn-block" (click)="nextPageEn()">
@@ -33,7 +32,7 @@
                     <img src="../../../assets/icon/malay.ico" width="50" height="50" ><br/>Malay</button></div>
             </div>
 
-        </mat-card-content>
+        </ion-card-content>
     </mat-card>
 
 </ion-content>
