--- a/src/app/profile-list/profile/profile.component.scss
+++ b/src/app/profile-list/profile/profile.component.scss
@@ -1,6 +1,10 @@
 .mat-card{
   background-color: #FFFFFB;
   color: #000000;
+  height: 100%;
+}
+mat-form-field{
+  width: 100%;
 }
 
 div.container{
