--- a/src/app/qrcode/qrcode.page.html
+++ b/src/app/qrcode/qrcode.page.html
@@ -3,12 +3,38 @@
     <ion-title><h3><a (click)="prevPage()"><mat-icon>keyboard_arrow_left</mat-icon></a>
       <img src="../../assets/icon/qr.png" width="30" height="30"> QR Code</h3></ion-title>
   </ion-toolbar>
+  <ion-img src="assets/images/qr.jpg"></ion-img>
 </ion-header>
 <ion-content class="ion-padding">
-  <img src="../../../assets/images/scicom.png">
-  <div class="row">
-    <div class="col-lg-4 col-md-4 col-sm-4"></div>
-    <div class = "col-lg-4 col-md-4 col-sm-4"><button mat-stroked-button color="accent" class="btn btn-block" (click)="onQR()">
-      <img src="../../../assets/icon/qr.png" width="50" height="50"><br/>QR Reader</button></div>
-  </div>
+  <ion-item>
+    <mat-select placeholder="Select Nickname to generate QR" [(ngModel)]="qrData">
+      <div *ngFor="let profile of profiles">
+        <mat-option value="{{profile['nickname']}}">{{profile['nickname']}}</mat-option>
+      </div>
+    </mat-select>
+  </ion-item>
+  <ion-row>
+    <ion-col col-sm-6 col-md-6 col-lg-6>
+      <button mat-stroked-button color="accent" class="btn btn-block" (click)="createCode()">
+      <img src="../../../assets/icon/qr2.svg" width="50" height="50"><br/>GenerateQR</button>
+    </ion-col>
+    <ion-col col-sm-6 col-md-6 col-lg-6>
+        <button mat-stroked-button color="accent" class="btn btn-block" (click)="scanCode()">
+        <img src="../../../assets/icon/qr.png" width="50" height="50"><br/>Scan QR</button>
+    </ion-col>
+  </ion-row>
+
+  <ion-card *ngIf="createdCode">
+    <ngx-qrcode [qrc-value]="createdCode"></ngx-qrcode>
+    <ion-card-content>
+      <p>ID : {{createdCode}}</p>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card *ngIf="scannedCode">
+    <ngx-qrcode [qrc-value]="scannedCode"></ngx-qrcode>
+    <ion-card-content>
+      <p>Scanned : {{scannedCode}}</p>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
