--- a/src/app/qrcode/qrcode.page.html
+++ b/src/app/qrcode/qrcode.page.html
@@ -1,4 +1,5 @@
 <ion-header>
+  <ion-toolbar></ion-toolbar>
   <ion-toolbar>
     <ion-title><h3><a (click)="prevPage()"><mat-icon>keyboard_arrow_left</mat-icon></a>
       <img src="../../assets/icon/qr.png" width="30" height="30"> QR Code</h3></ion-title>
