--- a/src/app/welcome/dashboard/dashboard.page.html
+++ b/src/app/welcome/dashboard/dashboard.page.html
@@ -1,13 +1,14 @@
 <ion-header>
+  <ion-toolbar></ion-toolbar>
   <ion-toolbar>
     <ion-title><h3><img src="../../../assets/icon/dashboard.png" width="30" height="30"> {{title}}</h3></ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
-  <img src="../../../assets/images/scicom.png">
-  <ion-avatar></ion-avatar>
-
+  <ion-card>
+    <img src="assets/images/flight.jpg">
+  </ion-card>
   <div class="row">
     <div class="col-lg-4 col-md-4 col-sm-4"></div>
     <div class = "col-lg-4 col-md-4 col-sm-4">
