--- a/src/app/welcome/instruction/instruction.page.html
+++ b/src/app/welcome/instruction/instruction.page.html
@@ -1,4 +1,5 @@
 <ion-header>
+    <ion-toolbar></ion-toolbar>
   <ion-toolbar>
     <ion-title>
       <h3><a (click)="prevPage()"><mat-icon>keyboard_arrow_left</mat-icon></a>
