--- a/src/app/welcome/terms/terms.page.html
+++ b/src/app/welcome/terms/terms.page.html
@@ -1,8 +1,9 @@
 <ion-header>
+  <ion-toolbar></ion-toolbar>
   <ion-toolbar>
     <ion-title>
       <h3><a (click)="prevPage()"><mat-icon>keyboard_arrow_left</mat-icon></a>
-        <img src="../../../assets/icon/terms.png" width="50" height="50">{{title}}</h3>
+        <img src="../../../assets/icon/terms.png" width="40" height="40">{{title}}</h3>
     </ion-title>
   </ion-toolbar>
 </ion-header>
