--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <ion-app>
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>
+        <img src="assets/images/logo-app.png"/>
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
   <ion-router-outlet></ion-router-outlet>
 </ion-app>
