--- a/src/app/dlc/dlc.page.html
+++ b/src/app/dlc/dlc.page.html
@@ -1,4 +1,5 @@
 <ion-header>
+  <ion-toolbar></ion-toolbar>
   <ion-toolbar>
     <ion-title><h3><a (click)="prevPage()"><mat-icon>keyboard_arrow_left</mat-icon></a>
       <img src="../../assets/icon/eland.png" width="30" height="30"> {{title}}</h3></ion-title>
@@ -8,7 +9,7 @@
 
 <ion-content class="ion-padding">
   <div class="search-div">
-    <button mat-raised-button color="primary" (click)="addTravel()">
+    <button mat-raised-button color="primary" class="btn" (click)="addTravel()">
       <mat-icon>add</mat-icon>{{addBtn}}
     </button>
     <mat-form-field class="search-form-field" floatLabel="never">
