--- a/src/app/welcome/dashboard/dashboard.page.html
+++ b/src/app/welcome/dashboard/dashboard.page.html
@@ -1,7 +1,10 @@
 <ion-header>
   <ion-toolbar></ion-toolbar>
   <ion-toolbar>
+    <ion-row>
     <ion-title><h3><img src="../../../assets/icon/dashboard.png" width="30" height="30"> {{title}}</h3></ion-title>
+    <ion-col col-sm-3 col-md-3 col-lg-3></ion-col><a (click)="goHome()"> <img src="assets/icon/home.png" width="40" height="40"></a> |
+    </ion-row>
   </ion-toolbar>
 </ion-header>
 
